chore: remove variable category and regenerate client
